<resources>
    <!--Facebook API-->
    <string name="facebook_app_id">676448619218928</string>
    <string name="fb_login_protocol_scheme">fb676448619218928</string>
    <!--============-->
    <string name="app_name">ChatApp</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="signInWithEmail">Login with email</string>
    <string name="register">Register</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="email">email</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="title_activity_main">ChatApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="error_message">Something went wrong</string>
    <string name="Signout">Sign out</string>
</resources>
