<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/l_registration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="#2cae8b">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/firstname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="#2cae8b">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/lastname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="#2cae8b">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/username" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="#2cae8b">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="#2cae8b">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submitRegistration"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/submit"/>
        <Button
            android:id="@+id/btn_closeRegistration"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/close"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_login"
        android:layout_width="301dp"
        android:layout_height="563dp"
        android:layout_marginLeft="55dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:visibility="visible">

        <EditText
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="email"
            app:layout_constraintBottom_toTopOf="@+id/editText3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.911" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:text="password"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="96dp"
            android:text="Sign in"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="or"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.49"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="106dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="238dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="238dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>